--- a/Presentation.Web/app/components/org/user/org-user.view.html
+++ b/Presentation.Web/app/components/org/user/org-user.view.html
@@ -1,4 +1,6 @@
-﻿<div search-box data-paging="pagination"></div>
+﻿<div id="mainGrid" data-kendo-grid="ctrl.mainGrid" data-k-options="ctrl.mainGridOptions"></div>
+
+<!--<div search-box data-paging="pagination"></div>
 <div class="searchbox-wrapper">
     <a class="excel-icon" data-ng-href="{{csvUrl}}">
         <img src="../../Images/excel.png" alt="Hent excelark" width="25">
@@ -48,7 +50,7 @@
                     Rolle
                 </th>
                 <th width="63">
-                    <!-- Control -->
+                     Control
                 </th>
             </tr>
         </thead>
@@ -99,4 +101,4 @@
             </tr>
         </tfoot>
     </table>
-</div>
+</div>-->
