--- a/Presentation.Web/app/components/org/user/org-user-modal-create.view.html
+++ b/Presentation.Web/app/components/org/user/org-user-modal-create.view.html
@@ -8,8 +8,8 @@
                 Email-adresse
             </label>
             <div class="col-md-8">
-                <input type="email" name="email" data-ng-model="email" class="form-control" data-ng-required="true" data-unique-org-user="{{checkAvailbleUrl}}" data-unique-email="{{checkAvailbleUrl}}" autofocus data-ng-disabled="busy" />
-                <span class="glyphicon form-control-feedback" data-ng-class="{ 'glyphicon-remove': createForm.name.$invalid && createForm.name.$dirty, 'glyphicon-ok': createForm.name.$valid }"></span>
+                <input type="email" name="email" id="email" data-ng-model="ctrl.email" class="form-control" data-ng-required="true" data-unique-org-user="{{ ctrl.checkAvailbleUrl }}" data-unique-email="{{ ctrl.checkAvailbleUrl }}" autofocus data-ng-disabled="ctrl.busy">
+                <span class="glyphicon form-control-feedback" data-ng-class="{ 'glyphicon-remove': ctrl.createForm.name.$invalid && ctrl.createForm.name.$dirty, 'glyphicon-ok': ctrl.createForm.name.$valid }"></span>
             </div>
         </div>
         <div class="form-group" data-ng-hide="emailExists">
@@ -17,7 +17,7 @@
                 Gentag email-adresse
             </label>
             <div class="col-md-8">
-                <input type="email" name="repeatEmail" data-ng-model="repeatEmail" class="form-control" data-match="email" data-ng-required="true" data-ng-disabled="busy" />
+                <input type="email" name="repeatEmail" id="repeatEmail" data-ng-model="ctrl.repeatEmail" class="form-control" data-match="ctrl.email" data-ng-required="true" data-ng-disabled="ctrl.busy">
             </div>
         </div>
         <div class="form-group" data-ng-hide="emailExists">
@@ -25,7 +25,7 @@
                 Fornavn
             </label>
             <div class="col-md-8">
-                <input type="text" name="name" data-ng-model="name" class="form-control" data-ng-required="true" data-ng-disabled="busy"/>
+                <input type="text" name="name" id="name" data-ng-model="ctrl.name" class="form-control" data-ng-required="true" data-ng-disabled="ctrl.busy">
             </div>
         </div>
         <div class="form-group" data-ng-hide="emailExists">
@@ -33,7 +33,7 @@
                 Efternavn
             </label>
             <div class="col-md-8">
-                <input type="text" name="lastName" data-ng-model="lastName" class="form-control" data-ng-required="true" data-ng-disabled="busy"/>
+                <input type="text" name="lastName" id="lastName" data-ng-model="ctrl.lastName" class="form-control" data-ng-required="true" data-ng-disabled="ctrl.busy">
             </div>
         </div>
         <div class="form-group" data-ng-hide="emailExists">
@@ -41,7 +41,7 @@
                 Telefon
             </label>
             <div class="col-md-8">
-                <input type="text" name="phoneNumber" data-ng-model="phoneNumber" class="form-control" data-ng-required="false" data-ng-disabled="busy" />
+                <input type="text" name="phoneNumber" id="phoneNumber" data-ng-model="ctrl.phoneNumber" class="form-control" data-ng-required="false" data-ng-disabled="ctrl.busy" />
             </div>
         </div>
         <div class="form-group">
@@ -50,13 +50,13 @@
             </p>
             <span class="help-block col-md-offset-3" data-ng-show="emailExists && !userExists">Brugeren findes allerede.</span>
             <span class="help-block col-md-offset-3" data-ng-show="userExists">Brugeren er allerede tilknyttet.</span>
-            <span class="help-block col-md-offset-3" data-ng-show="createUser.form.email.$error.lookup">Der skete en fejl ved tjek om E-Mail er i brug!</span>
+            <span class="help-block col-md-offset-3" data-ng-show="ctrl.createUser.form.email.$error.lookup">Der skete en fejl ved tjek om E-Mail er i brug!</span>
         </div>
     </form>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-success" data-ng-show="emailExists" data-ng-disabled="userExists && emailExists" data-ng-click="create(false)">Tilknyt bruger</button>
-    <button class="btn btn-primary" data-ng-hide="emailExists" data-ng-click="create(false)" data-ng-disabled="createUser.form.$invalid || createUser.form.$pristine || busy" data-disabled-on-busy="">Opret bruger</button>
-    <button class="btn btn-success" data-ng-hide="emailExists" data-ng-click="create(true)" data-ng-disabled="createUser.form.$invalid || createUser.form.$pristine || busy" data-disabled-on-busy="">Opret bruger og send advis</button>
-    <button class="btn btn-warning" data-ng-click="cancel()" data-ng-disabled="busy" data-disabled-on-busy="">Annuller</button>
+    <button class="btn btn-success" data-ng-show="emailExists" data-ng-disabled="userExists && emailExists" data-ng-click="ctrl.create(false)">Tilknyt bruger</button>
+    <button class="btn btn-primary" data-ng-hide="emailExists" data-ng-click="create(false)" data-ng-disabled="ctrl.createUser.form.$invalid || ctrl.createUser.form.$pristine || ctrl.busy" data-disabled-on-busy="">Opret bruger</button>
+    <button class="btn btn-success" data-ng-hide="emailExists" data-ng-click="create(true)" data-ng-disabled="ctrl.createUser.form.$invalid || ctrl.createUser.form.$pristine || ctrl.busy" data-disabled-on-busy="">Opret bruger og send advis</button>
+    <button class="btn btn-warning" data-ng-click="ctrl.cancel()" data-ng-disabled="ctrl.busy" data-disabled-on-busy="">Annuller</button>
 </div>
