--- a/Presentation.Web/app/components/org/user/org-user-modal-edit.view.html
+++ b/Presentation.Web/app/components/org/user/org-user-modal-edit.view.html
@@ -1,5 +1,5 @@
 ﻿<div class="modal-header">
-    <h3>Rediger bruger</h3>
+    <h3>Redigér bruger</h3>
 </div>
 <div class="modal-body">
     <form name="editUser.form" novalidate="novalidate" class="form-horizontal">
@@ -8,7 +8,7 @@
                 Email-adresse
             </label>
             <div class="col-md-8">
-                <input type="email" name="email" id="email" data-ng-model="ctrl.email" class="form-control" data-ng-required="true" data-ng-disabled="busy">
+                <input type="email" name="email" id="email" data-ng-model="ctrl.vm.email" class="form-control" data-ng-required="true" data-disabled-on-busy>
             </div>
         </div>
         <div class="form-group">
@@ -16,7 +16,7 @@
                 Navn
             </label>
             <div class="col-md-8">
-                <input type="text" name="name" id="name" data-ng-model="ctrl.name" class="form-control" data-ng-required="true" data-disabled-on-busy>
+                <input type="text" name="name" id="name" data-ng-model="ctrl.vm.name" class="form-control" data-ng-required="true" data-disabled-on-busy>
             </div>
         </div>
         <div class="form-group">
@@ -24,7 +24,7 @@
                 Efternavn
             </label>
             <div class="col-md-8">
-                <input type="text" name="lastName" id="lastName" data-ng-model="ctrl.lastName" class="form-control" data-ng-required="true" data-disabled-on-busy>
+                <input type="text" name="lastName" id="lastName" data-ng-model="ctrl.vm.lastName" class="form-control" data-ng-required="true" data-disabled-on-busy>
             </div>
         </div>
         <div class="form-group">
@@ -32,7 +32,29 @@
                 Telefon
             </label>
             <div class="col-md-8">
-                <input type="text" name="phoneNumber" id="phoneNumber" data-ng-model="ctrl.phoneNumber" class="form-control" data-ng-required="false" data-disabled-on-busy>
+                <input type="text" name="phoneNumber" id="phoneNumber" data-ng-model="ctrl.vm.phoneNumber" class="form-control" data-ng-required="false" data-disabled-on-busy>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="roller" class="col-md-3 control-label">
+                Roller
+            </label>
+            <div class="col-md-8">
+                <div class="checkbox">
+                    <label><input type="checkbox" value="" data-ng-model="ctrl.vm.isLocalAdmin">Lokal admin</label>
+                </div>
+                <div class="checkbox">
+                    <label><input type="checkbox" value="" data-ng-model="ctrl.vm.isOrgAdmin">Organisation admin</label>
+                </div>
+                <div class="checkbox">
+                    <label><input type="checkbox" value="" data-ng-model="ctrl.vm.isProjectAdmin">Projekt admin</label>
+                </div>
+                <div class="checkbox">
+                    <label><input type="checkbox" value="" data-ng-model="ctrl.vm.isSystemAdmin">System admin</label>
+                </div>
+                <div class="checkbox">
+                    <label><input type="checkbox" value="" data-ng-model="ctrl.vm.isContractAdmin">Kontrakt admin</label>
+                </div>
             </div>
         </div>
     </form>
