--- a/Presentation.Web/app/components/org/user/org-user-create.modal.view.html
+++ b/Presentation.Web/app/components/org/user/org-user-create.modal.view.html
@@ -8,7 +8,7 @@
                 Email-adresse
             </label>
             <div class="col-md-8">
-                <input type="email" name="email" id="email" data-ng-model="ctrl.email" class="form-control" data-ng-required="true" data-unique-org-user data-unique-email autofocus data-ng-disabled="ctrl.busy">
+                <input type="email" name="email" id="email" data-ng-model="ctrl.vm.email" class="form-control" data-ng-required="true" data-unique-org-user data-unique-email autofocus data-ng-disabled="ctrl.busy">
                 <span class="glyphicon form-control-feedback" data-ng-class="{ 'glyphicon-remove': ctrl.createForm.name.$invalid && ctrl.createForm.name.$dirty, 'glyphicon-ok': ctrl.createForm.name.$valid }"></span>
             </div>
         </div>
@@ -17,7 +17,7 @@
                 Gentag email-adresse
             </label>
             <div class="col-md-8">
-                <input type="email" name="repeatEmail" id="repeatEmail" data-ng-model="ctrl.repeatEmail" class="form-control" data-match="ctrl.email" data-ng-required="true" data-ng-disabled="ctrl.busy">
+                <input type="email" name="repeatEmail" id="repeatEmail" data-ng-model="ctrl.repeatEmail" class="form-control" data-match="ctrl.vm.email" data-ng-required="true" data-ng-disabled="ctrl.busy">
             </div>
         </div>
         <div class="form-group" data-ng-hide="emailExists">
@@ -25,7 +25,7 @@
                 Fornavn
             </label>
             <div class="col-md-8">
-                <input type="text" name="name" id="name" data-ng-model="ctrl.name" class="form-control" data-ng-required="true" data-ng-disabled="ctrl.busy">
+                <input type="text" name="name" id="name" data-ng-model="ctrl.vm.name" class="form-control" data-ng-required="true" data-ng-disabled="ctrl.busy">
             </div>
         </div>
         <div class="form-group" data-ng-hide="emailExists">
@@ -33,7 +33,7 @@
                 Efternavn
             </label>
             <div class="col-md-8">
-                <input type="text" name="lastName" id="lastName" data-ng-model="ctrl.lastName" class="form-control" data-ng-required="true" data-ng-disabled="ctrl.busy">
+                <input type="text" name="lastName" id="lastName" data-ng-model="ctrl.vm.lastName" class="form-control" data-ng-required="true" data-ng-disabled="ctrl.busy">
             </div>
         </div>
         <div class="form-group" data-ng-hide="emailExists">
@@ -41,27 +41,27 @@
                 Telefon
             </label>
             <div class="col-md-8">
-                <input type="text" name="phoneNumber" id="phoneNumber" data-ng-model="ctrl.phoneNumber" class="form-control" data-ng-required="false" data-ng-disabled="ctrl.busy" />
+                <input type="text" name="phoneNumber" id="phoneNumber" data-ng-model="ctrl.vm.phoneNumber" class="form-control" data-ng-required="false" data-ng-disabled="ctrl.busy" />
             </div>
         </div>
-        <div class="form-group">
+        <div class="form-group" data-ng-hide="userExists">
             <label for="roller" class="col-md-3 control-label">
                 Roller
             </label>
             <div class="col-md-8">
-                <div class="checkbox">
+                <div class="checkbox" ng-show="ctrl.isUserGlobalAdmin || ctrl.isUserLocalAdmin">
                     <label><input type="checkbox" value="" data-ng-model="ctrl.vm.isLocalAdmin">Lokal admin</label>
                 </div>
-                <div class="checkbox">
-                    <label><input type="checkbox" value="" data-ng-model="ctrl.vm.isOrgAdmin">Organisation admin</label>
+                <div class="checkbox" ng-show="ctrl.isUserGlobalAdmin || ctrl.isUserLocalAdmin || ctrl.isUserOrgAdmin">
+                    <label><input type="checkbox" value="" data-ng-model="ctrl.vm.isOrgAdmin">Organisations admin</label>
                 </div>
-                <div class="checkbox">
+                <div class="checkbox" ng-show="ctrl.isUserGlobalAdmin || ctrl.isUserLocalAdmin || ctrl.isUserProjectAdmin">
                     <label><input type="checkbox" value="" data-ng-model="ctrl.vm.isProjectAdmin">Projekt admin</label>
                 </div>
-                <div class="checkbox">
+                <div class="checkbox" ng-show="ctrl.isUserGlobalAdmin || ctrl.isUserLocalAdmin || ctrl.isUserSystemAdmin">
                     <label><input type="checkbox" value="" data-ng-model="ctrl.vm.isSystemAdmin">System admin</label>
                 </div>
-                <div class="checkbox">
+                <div class="checkbox" ng-show="ctrl.isUserGlobalAdmin || ctrl.isUserLocalAdmin || ctrl.isUserContractAdmin">
                     <label><input type="checkbox" value="" data-ng-model="ctrl.vm.isContractAdmin">Kontrakt admin</label>
                 </div>
             </div>
@@ -77,7 +77,7 @@
     </form>
 </div>
 <div class="modal-footer">
-    <button class="btn btn-success" data-ng-show="emailExists" data-ng-disabled="userExists && emailExists" data-ng-click="ctrl.create(false)">Tilknyt bruger</button>
+    <button class="btn btn-success" data-ng-show="emailExists" data-ng-disabled="userExists && emailExists" data-ng-click="ctrl.attachUser()">Tilknyt bruger</button>
     <button class="btn btn-primary" data-ng-hide="emailExists" data-ng-click="ctrl.create(false)" data-ng-disabled="ctrl.createUser.form.$invalid || ctrl.createUser.form.$pristine || ctrl.busy" data-disabled-on-busy="">Opret bruger</button>
     <button class="btn btn-success" data-ng-hide="emailExists" data-ng-click="ctrl.create(true)" data-ng-disabled="ctrl.createUser.form.$invalid || ctrl.createUser.form.$pristine || ctrl.busy" data-disabled-on-busy="">Opret bruger og send advis</button>
     <button class="btn btn-warning" data-ng-click="ctrl.cancel()" data-ng-disabled="ctrl.busy" data-disabled-on-busy="">Annuller</button>
