--- a/Presentation.Web/app/components/org/user/org-user-edit.modal.view.html
+++ b/Presentation.Web/app/components/org/user/org-user-edit.modal.view.html
@@ -40,19 +40,19 @@
                 Roller
             </label>
             <div class="col-md-8">
-                <div class="checkbox">
+                <div class="checkbox" ng-show="ctrl.isUserGlobalAdmin || ctrl.isUserLocalAdmin">
                     <label><input type="checkbox" value="" data-ng-model="ctrl.vm.isLocalAdmin">Lokal admin</label>
                 </div>
-                <div class="checkbox">
-                    <label><input type="checkbox" value="" data-ng-model="ctrl.vm.isOrgAdmin">Organisation admin</label>
+                <div class="checkbox" ng-show="ctrl.isUserGlobalAdmin || ctrl.isUserLocalAdmin || ctrl.isUserOrgAdmin">
+                    <label><input type="checkbox" value="" data-ng-model="ctrl.vm.isOrgAdmin">Organisations admin</label>
                 </div>
-                <div class="checkbox">
+                <div class="checkbox" ng-show="ctrl.isUserGlobalAdmin || ctrl.isUserLocalAdmin || ctrl.isUserProjectAdmin">
                     <label><input type="checkbox" value="" data-ng-model="ctrl.vm.isProjectAdmin">Projekt admin</label>
                 </div>
-                <div class="checkbox">
+                <div class="checkbox" ng-show="ctrl.isUserGlobalAdmin || ctrl.isUserLocalAdmin || ctrl.isUserSystemAdmin">
                     <label><input type="checkbox" value="" data-ng-model="ctrl.vm.isSystemAdmin">System admin</label>
                 </div>
-                <div class="checkbox">
+                <div class="checkbox" ng-show="ctrl.isUserGlobalAdmin || ctrl.isUserLocalAdmin || ctrl.isUserContractAdmin">
                     <label><input type="checkbox" value="" data-ng-model="ctrl.vm.isContractAdmin">Kontrakt admin</label>
                 </div>
             </div>
